Fixed the nav offset that sucked at mobile collapses

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -144,6 +144,8 @@ blockquote{
 	padding-left: -40px; // Reset bullet point space
 	display: inline-block;
 
+	padding: 0;
+
 	li{
 		display: inline-block;
 		margin-right: 0.5em;
