--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ blockquote { margin: 0; padding: 0em 0em 0em 1em; font-size: 1.05em; font-style:
 
 .nav, #searchform, .social { vertical-align: middle; }
 
-.nav { list-style-type: none; margin: 5px 0; padding-left: -40px; display: inline-block; }
+.nav { list-style-type: none; margin: 5px 0; padding-left: -40px; display: inline-block; padding: 0; }
 .nav li { display: inline-block; margin-right: 0.5em; }
 .nav li a:hover { color: #498c34; }
 
